2005-03-26  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (map_utf8const): Call pushdecl.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* tree.cc (wrap_synchronized): Don't put a type on a
	TRY_FINALLY_EXPR.

2005-03-26  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_try): Don't create TRY_CATCH_EXPR if there are no
	catch blocks.

2005-03-25  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (lay_out_class): Resolve class members.
	* tree.hh (tree_generator::stringbuffer_append): Declare.
	(tree_generator::handle_string_plus): Likewise.
	(tree_generator::find_method): Likewise.
	(tree_generator::create_stringbuffer): Likewise.
	(tree_generator::finish_stringbuffer): Likewise.
	* tree.cc (stringbuffer_append): New method.
	(handle_string_plus): Likewise.
	(visit_arith_binary): Handle String '+'.
	(visit_op_assignment): Added assertion.
	(find_method): New method.
	(create_stringbuffer): Likewise.
	(finish_stringbuffer): Likewise.

2005-03-24  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_switch): Annotate case label expression.

2005-03-24  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::binary_operator): Updated.
	* tree.cc (binary_operator): Added result_type argument.
	(visit_comparison): Updated.

2005-03-24  Tom Tromey  <tromey@redhat.com>

	* tree.hh (tree_generator::binary_operator): Declare.
	(tree_generator::arith_shift): Likewise.
	* tree.cc (visit_block): Annotate result.
	(visit_catch): Likewise.
	(visit_for): Likewise.
	(visit_synchronized): Likewise.
	(visit_array_initializer): Likewise.
	(visit_array_ref): Likewise.
	(binary_operator): Added 'element' argument.  Annotate result.
	(visit_arith_binary): Updated.
	(visit_arith_binary): Likewise.
	(visit_arith_binary): Annotate result.
	(visit_arith_binary): Updated.
	(arith_shift): Added 'element' argument.  Annotate result.
	(visit_arith_shift): Updated.
	(visit_assignment): Annotate result.
	(handle_op_assignment): Added 'element' argument.  Annotate
	result.